# AI-PASS

./: .dockerignore  .gitignore  .gitlab-ci.yml  COMMANDS.md  Dockerfile  LICENSE.md  PROJECT_MANAGEMENT.md  README.md  docker-compose.yml  group_project_meetings.md  locked-requirements.txt  project_group_meetings.md  pyproject.toml  requirements-auto-cleaner.py  requirements.txt  settings.py
JupyterNotebook_(Toy-models)/: cnn_toy_model.ipynb
JupyterNotebook_(Toy-models)/.ipynb_checkpoints/: cnn_toy_model-checkpoint.ipynb
ModelTrainingService/: cnn.py  cnn_model.ipynb  cnn_model.py  cnn_model_(v3).ipynb  cnn_model_(v3_inc_ethinicity).ipynb  test_cnn.py
ModelTrainingService/models/: CNN-model-2022-12-30_02-35-58_AM.h5
ModelTrainingService/plot_html/: accuracy_age.html  accuracy_gender.html  accuracy_race.html  mae_age.html  overall_loss.html
age-detection-helm-chart/: Chart.yaml  values.yaml
age-detection-helm-chart/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml  statefulset.yaml  volumes.yaml
age_detection/: db.sqlite3  manage.py
age_detection/FacePicture/: admin.py  apps.py  filters.py  models.py  serializers.py  urls.py  views.py
app/: admin.py  forms.py  ml.py  models.py  services.py  tasks.py  urls.py  views.py
app/migrations/: 0001_initial.py  (+1 more)
docker/: Dockerfile  entrypoint.sh
kubernetes/: deployement.yaml  deployment.yaml
main/: celery.py  settings.py  urls.py
templates/: dataset_upload.html  index.html
webservice/: .gitignore  gunicorn.conf.py  manage.py  requirements.txt
(+79 files in other folders)
