[tool.poetry]
name = "dit825-age-detection"
version = "0.1.0"
description = ""
authors = ["olgara <olgara@student.chalmers.se>"]
readme = "README.md"
packages = [{include = "dit825_age_detection"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.3"
jupyter = "^1.0.0"
seaborn = "^0.12.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
